--- a/tex/autoridade.tex
+++ b/tex/autoridade.tex
@@ -191,9 +191,10 @@ distribuição de equilíbrio em pontos correspondentes do diagrama de fases.
 
 \newthought{Na figura}\ref{fig:phasediagram} temos um diagrama de fases completo variando $\alpha$ e a temperatura para um número fixo de agentes. A variável descrita no mapa de cores é a razão $\frac{\davg}{\dmax}$. Esse diagrama mostra uma linha de transição de fases entre a região azul escura - a região em que a organização do grafo é fortemente centralizada, com nós periféricos pouco conectados, e uma região em que a razão $\frac{\davg}{\dmax}$ é menos extrema. Acima de uma temperatura crítica essa fase não é mais observada. A região vermelho escura corresponde à fase totalmente conectada, ou situações bem próximas disso. Nessa região não há grandes saltos nos parâmetros de ordem, que mudam continuamente com a temperatura e $a$. A linha de transição de fase pode ser observada para diferentes valores da temperatura na figura \ref{fig:critical}. Note que para $\beta^{-1} \to 0$, temos $\alpha^{\star} = 1$.
 \begin{figure}
-	\includegraphics[width = 1.15\textwidth]{figuras/critical.png}
- 	\caption{Valor crítico do parâmetro $a$ em função da temperatura para diferentes tamanhos do sistema.}
- 	\label{fig:critical}
+  \subfloat[\label{fig:critical}Valor crítico do parâmetro $a$ em função da temperatura para diferentes tamanhos do sistema.]{\includegraphics[width = \textwidth]{figuras/critical.png}}\\
+  \subfloat[\label{fig:acceptrate}Taxa de aceitação do algoritmo de Monte Carlo - fração das propostas de mudanças no microestado do sistema que foram aceitas com probabilidade dada pelo fator de Gibbs, sampleada com $\beta = 1.0$]{\includegraphics[width = \textwidth]{figuras/acceptrate.png}}
+  \caption[Variação do diagrama de fases com o tamanho do grupo.]{Variação do diagrama de fases com o tamanho do grupo.}
+  \label{fig:criticalandacceptrate}
 \end{figure}
 
 \subsection{Interpretação parcial dos resultados}
@@ -202,21 +203,17 @@ O diagrama de fases apresenta três regimes. Para valores altos de $a = \frac{2\
 
 Para valores intermediários de $a$, existe um nó com conectividade ligeiramente maior, mas existem flutuações grandes. A taxa de aceitação do algoritmo de monte carlo é alta (ver: figura \ref{fig:acceptrate}). Nesse regime, o grafo é momentaneamente não-simétrico, mas estatísticamente qualquer nó pode ocupar a posição de conectividade maior e alterações desse nó central são frequentes. Há um pico nos desvios padrão dos parâmetros de ordem para um certo valor do parâmetro de controle $a{\star}$, indicando um possível ponto crítico. 
 \begin{figure}
-	\includegraphics[width = \textwidth]{figuras/acceptrate.png}
- 	\caption[Taxa de aceitação do algoritmo de Monte Carlo]{Taxa de aceitação do algoritmo de Monte Carlo - fração das propostas de mudanças no microestado do sistema que foram aceitas com probabilidade dada pelo fator de Gibbs, sampleada com $\beta = 1.0$}
- 	\label{fig:acceptrate}
+  \subfloat[Corte do diagrama de fase para vários tamanhos do grupo.]{\includegraphics[width = \textwidth]{./figuras/manysizes.png}}\\
+  \subfloat[Finite size scaling do modelo.]{\includegraphics[width = \textwidth]{./figuras/manysizes.png}}
+  \caption[Variação do diagrama de fases com o tamanho do grupo.]{Variação do diagrama de fases com o tamanho do grupo.}
+  \label{fig:manysizes}
 \end{figure}
 
 Para valores mais baixos de $a$, a simetria é espontaneamente quebrada e apenas um nó ocupa uma posição central. Esse nó está conectado a todos os outros, que estão quase que exclusivamente conectados a ele. O grafo se torna uma estrela e não há flutuação observável na conectividade do nó central. Neste regime, a representação mental da rede de relacionamenos sociais construídas pelo agente é assimétrica e existe um único nó que serve como proxy para todas as relações sociais do grupo. Na representação mental do agente em questão, o status social de cada um dos outros nós é definido por como ele se relaciona a esse nó central.
 
-Na figura \ref{fig:manysizes} pode-se ver como o diagrama de fases varia com o número de agentes. Quanto maior o número de agentes, maiores as variações dos parametros de ordem durante a possível transição de fase. 
-\begin{figure}
-	\includegraphics[width = \textwidth]{figuras/manysizes.png}
- 	\caption{Variação do diagrama de fases com o tamanho do grupo.}
- 	\label{fig:manysizes}
-\end{figure}
-\subsection{Dinâmica para muitos agentes } 
+Na figura \ref{fig:manysizes} pode-se ver como o diagrama de fases varia com o número de agentes. Quanto maior o número de agentes, maiores as variações dos parametros de ordem durante a possível transição de fase. Na mesma figura podemos ver uma simulação com finite size scaling em um gráfico do inverso do desvio padrão de $\E{\dmax}$ no ponto crítico $\alpha^{\star}$ contra o tamanho do sistema, mostrando que essa grandeza diverge para $N\to \infty$.
 
+\subsection{Dinâmica para muitos agentes e resultados numéricos} 
 \newthought{As figuras acima} tratam de propriedades independentes da interação entre os agentes. Essa interação, como dito anteriormente, será introduzidas na forma de aprendizado social (``fofoca'' ou \textit{gossip}). Durante a simulação de Monte Carlo, duas possíveis fontes serão consideradas para a proposta de uma nova aresta no passo de Metropolis:
 \begin{itemize}
  \item Com probabilidade $1-g$, um novo valor para a aresta $(i,j)$ do agente $k$ será sorteado ao acaso, 
@@ -236,6 +233,7 @@ Na figura \ref{fig:gossip} são exibidas duas grandezas que quantificam a correl
 \]
 a sua distribuição de probabilidades. O primeiro parâmetro de ordem, correspondente às linhas tracejadas, é dada por $\E{\max_{c} p(c)}$, ou seja, o fração do número de agentes que possuem como nó central o nó que mais vezes aparece como nó central. Isso corresponde de forma grosseira a que fração dos agentes tem grafos estrela com o mesmo nó ocupando o centro da estrela. A segunda variável é, a menos de uma constante multiplicativa, simplesmente a entropia da distribuição de $c$: $S(c) = -\sum_{c} p(c) \log p(c)$. Ambas as grandezas são calculadas para grafos em forma de estrela, em função da probabilidade de encontro entre dois agentes dada por $g$, para valores fixos de temperatura, variando-se o número de agentes. O resultado mostra que, para baixos valores de $g$, a probabilidade de que um certo nó seja o centro de um agente tomado ao acaso é aproximadamente uniforme, e nenhum dos nós domina como centro de uma fração substancial de grafos. Para valores maiores de $g$, os grafos estrela tendem a se correlacionar e o mesmo nó pode ser central em uma grande fração de agentes. Dessa forma, é possível que no regime em que o grafo é uma estrela, o mesmo agente sirva como proxy para as relações sociais de todo o grupo para uma substancial maioria dos agentes.
 
+\section{Sumarização e interpretação dos Resultados}
 \newthought{É possível}, dessa forma, distinguir três situações, ou ``fases'' desse modelo:
 \begin{enumerate}
  \item Para $a$ grande, ou seja, grupos de tamanho pequeno ou agentes com grande capacidade cognitiva, os agentes possuem modelos mentais do panorama social do seu grupo em que nenhum agente em particular ocupa uma posição central. Em outras palavras, a representação mental das redes sociais nesse grupo são todas simétricas e nenhum agente se destaca. 
@@ -246,6 +244,5 @@ a sua distribuição de probabilidades. O primeiro parâmetro de ordem, correspo
 \end{enumerate}
 Postulando que o capital social derivado dessa posição central quebra a simetria do resultado desses jogos sociais de maneira vantajosa ao agente central, esse resultado é compatível com as observações empíricas descritas no inicio do texto. 
 \ldots
-\subsection{Resultados numéricos para muitos agentes}
-\section{Sumarização e interpretação dos Resultados}
+
 \section{Conclusão}
